# plone-operaton-playground

./: .buildinfo  .devcontainer.json  .gitignore  .treefmt.toml  Makefile  README.md  blank-decision.dmn  blank-form.form  blank-process.bpmn  devenv.nix  devenv.yaml  ecosystem.html  foreword.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: build.yml
_downloads/09fc957f7c9d5716e2cbb7628a0e958d/: without-compensation.bpmn
_downloads/0bdf037b4bbd1fd259afb18d03649b3e/: more-boundary-events.bpmn
_downloads/0f2e8bc143c164aeb31db05fa4ee74bf/: multiple-end-events.bpmn
_downloads/1e4b5ce8e800770cf2507be4d37f95ad/: sequence-flow-annotated.bpmn
_downloads/201cd139e16a85fb65b01e4adb7e76ca/: review-flow-with-pools.bpmn
_downloads/292185ca9a86bfba62d2ff64ad3e04b2/: intermediate-events.bpmn
_downloads/3063cb1aa5cc35a5c90200d760558754/: simple-peer-review.form
_sources/: foreword.md  index.md
_static/: bpmn-js-token-simulation.js  custom.css  custom.js
backend/: .gitignore  LICENSE.md  Makefile  devenv.nix  instance.yaml  pyproject.toml
bpmn/: advanced.html  index.html  juel.html  review-process.bpmn
docs/: Makefile  conf.py  ecosystem.md  foreword.md  index.md
forms/: index.html
frontend/: Makefile  devenv.nix  eslint.config.js  package-lock.json  package.json
modeling/: index.html
operaton/: index.html
playground/: index.html
resources/: vs-code-bpmn-modeler-0.6.2.vsix
tasks/: devenv.nix  pyproject.toml
tasks/workflow/: publish.robot  pyproject.toml  retract.robot
(+93 files in other folders)
